--- a/laborator2/app/src/main/res/menu/main_menu.xml
+++ b/laborator2/app/src/main/res/menu/main_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="Home"
-        android:id="@+id/home"
+        android:title="Location"
+        android:id="@+id/location"
         app:showAsAction="never"
         />
     <item
@@ -24,6 +24,11 @@
     <item
         android:title="Settings"
         android:id="@+id/settings"
+        app:showAsAction="never"
+        />
+    <item
+        android:title="List Sensors"
+        android:id="@+id/sensors"
         app:showAsAction="never"
         />
 </menu>
