--- a/laborator2/app/src/main/res/menu/main_menu.xml
+++ b/laborator2/app/src/main/res/menu/main_menu.xml
@@ -31,4 +31,9 @@
         android:id="@+id/sensors"
         app:showAsAction="never"
         />
+    <item
+        android:title="Camera"
+        android:id="@+id/camera"
+        app:showAsAction="never"
+        />
 </menu>
